--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,20 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+/* Add night mode styles */
+.night-mode {
+  background-color: #333; /* Dark grey background */
+  color: white; /* White text color */
+}
+
+.night-mode .navbar-light .navbar-nav .nav-link {
+  color: white !important; /* White text color for navbar links */
+}
+
+
+
+
+
